src/style.css
:root {
  font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  /* available colours, see lib/theme.ts
  --primary: #...;
  --primary-dark: #...;
  --primary-light: #...;
  --primary-contrast: #...;

  --secondary: #...;
  --secondary-dark: #...;
  --secondary-light: #...;

  --background: #...;
  --background-paper: #...;

  --text: #...;
  --text-disabled: #...;
  */

  color: var(--text);
  backdrop-filter: blur(5px);
  background-color: rgba(255, 255, 255, 0.05);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  background-color: transparent;
  margin: 0;
  padding: 0;
}

#app {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: fit-content;
  min-height: 100%;
  margin-left: 2em;
  margin-right: 2em;
  padding: 2rem;
  text-align: center;
}

dialog {
  border: 1px solid rgba(187, 153, 255, 0.3);
  border-radius: 10px;
  background-color: inherit;
  backdrop-filter: blur(30px);
  color: var(--text);
  max-width: 75%;
  cursor: default;
  align-items: center;
}

button {
  display: flex;
  align-items: center;
  align-self: center;
  justify-content: center;
  border-radius: 20px;
  border: 1px solid var(--primary);
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: bold;
  font-family: inherit;
  color: var(--primary);
  cursor: pointer;
  transition: border-color 0.25s;
  background-color: inherit;
  width: 100%;
}
button:hover {
  filter: brightness(120%);
}

input[type='number'],
input[type='text'] {
  background-color: inherit;
  color: inherit;
  border: 1px solid var(--primary);
  border-radius: 20px;
  text-align: center;
  font-size: larger;
  appearance: textfield;
  -moz-appearance: textfield;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
}

input[type='checkbox'] {
  appearance: none;
  background-image: inherit;
  color: var(--primary);
  margin: 0;
  font: inherit;
  width: 1.15em;
  height: 1.15em;
  border: 0.15em solid var(--primary);
  border-radius: 0.15em;
  transform: translateY(-0.075em);
  display: grid;
  place-content: center;
  outline: none;
  border-radius: 1em;
  cursor: pointer;
}

input[type='checkbox']::before {
  content: '';
  width: 0.65em;
  height: 0.65em;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1em 1em var(--primary-dark);
  clip-path: circle();
}

input[type='checkbox']:checked::before {
  transform: scale(1);
}

.btn-group-left {
  border-top-right-radius: 0px !important;
  border-bottom-right-radius: 0px !important;
  border-right: 0 !important;
  width: 50%;
}

.btn-group-right {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
  width: 50%;
}

.row {
  display: flex;
  flex-direction: row;
}

.init-row {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  padding: 0.7em;
  border-radius: 20px;
  background-image: inherit;
  border: 1px solid var(--primary);
}

.init-card {
  display: flex;
  flex-direction: column;
  align-content: center;
  background-color: var(--primary-light);
  color: var(--primary-contrast);
  border-radius: 5px;
  font-weight: bold;
  height: 1.5em;
  width: 1.5em;
  cursor: pointer;
}

.keep {
  background-color: var(--primary-dark);
  color: var(--primary-contrast);
}

.col {
  display: inline-flex;
  flex-direction: column;
}

.justify-evenly {
  justify-content: space-evenly;
}

.justify-between {
  justify-content: space-between;
}

.justify-end {
  justify-content: end;
}

.items-center {
  align-items: center;
}

.items-end {
  align-items: end;
}

.mr-sm {
  margin-right: 0.5em;
}

.mr-md {
  margin-right: 1em;
}

.ml-sm {
  margin-left: 0.5em;
}

.mt-sm {
  margin-top: 0.5em;
}

.mt-md {
  margin-top: 1em;
}

.mb-sm {
  margin-bottom: 0.5em;
}

.mb-md {
  margin-bottom: 1em;
}

.full-width {
  width: 100%;
}

.card {
  padding: 1em;
  display: flex;
  flex-direction: column;
}

svg {
  fill: var(--text);
}

